fix overflow on mobile

--- a/src/main.css
+++ b/src/main.css
@@ -27,6 +27,7 @@ html {
 body {
   font-family: Roboto, sans-serif;
   line-height: 1.5;
+  overflow-x: hidden;
 }
 
 h2 {
